--- a/package.json
+++ b/package.json
@@ -2,25 +2,35 @@
   "name": "react-starter-bwm",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "api/v1/*": {
+      "target": "http://localhost:3001"
+    }
+  },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "camel-case": "^3.0.0",
+    "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.1",
+    "mongoose": "^5.0.17",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "popper.js": "^1.14.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "bcrypt": "^2.0.1",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.2.1",
-    "moment": "^2.22.1",
-    "mongoose": "^5.0.17"
+    "titleize": "^1.0.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar ./src -o ./src",
