--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "react-starter-bwm",
   "version": "0.1.0",
+  "engines": {
+    "node": "8.11.1",
+    "npm": "5.6.0"
+  },
   "private": true,
   "proxy": {
     "api/v1/*": {
@@ -38,10 +42,12 @@
     "titleize": "^1.0.1"
   },
   "scripts": {
+    "heroku-postbuild": "npm run build",
     "build-css": "node-sass-chokidar ./src -o ./src",
     "watch-css": "npm run build-css && node-sass-chokidar ./src -o ./src --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "npm start --prefix server",
+    "start-dev": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
