--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "react-responsive-modal": "^3.0.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-stripe-elements": "^2.0.1",
     "react-toastify": "^4.0.0-rc.4",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
+    "stripe": "^6.19.0",
     "titleize": "^1.0.1"
   },
   "scripts": {
